--- a/application/Index/view/layouts/layout1.html
+++ b/application/Index/view/layouts/layout1.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="__STATIC__/index/css/animate.css" type="text/css" />
     <link rel="stylesheet" href="__STATIC__/index/css/app.css" type="text/css" />
     <script type="text/javascript" src="__STATIC__/js/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="__STATIC__/js/jPlayer/jplayer.flat.css"></script>
+    <!--<script type="text/javascript" src="__STATIC__/index/js/jPlayer/jplayer.flat.css"></script>-->
     <!--<link rel="stylesheet" href="__STATIC__/admin/css/style.css">-->
     <!--<link rel="stylesheet" href="__STATIC__/js/layui/css/layui.css">-->
     <link rel="stylesheet" href="__STATIC__/iconfont/iconfont.css">
