--- a/application/Index/view/index/index.html
+++ b/application/Index/view/index/index.html
@@ -22,8 +22,8 @@
                     <a href="#"><img src="__STATIC__{$vo.poster}" alt="" style="height: 7em;" class="r r-2x img-full"></a>
                 </div>
                 <div class="padder-v">
-                    <a href="#" class="text-ellipsis">{$vo.name}</a>
-                    <a href="#" class="text-ellipsis text-xs text-muted">Miaow</a>
+                    <a href="{:url('index/details',['id'=>$vo.id])}" class="text-ellipsis">{$vo.name}</a>
+                    <!--<a href="#" class="text-ellipsis text-xs text-muted">Miaow</a>-->
                 </div>
             </div>
         </div>
