--- a/application/Index/view/layouts/layout1.html
+++ b/application/Index/view/layouts/layout1.html
@@ -26,6 +26,16 @@
 <body class="">
 <section class="vbox">
     <header class="bg-black-only header header-md navbar navbar-fixed-top-xs">
+        <div class="navbar-header aside .bg-black-only">
+
+            <a href="{:url('index')}" class="navbar-brand" style="color: #bdbdbd">
+                <i class="iconfont icon-bigdata-logo" style="color: #0084ff;font-size: 20px"></i>
+                <span class="hidden-nav-xs m-l-sm">BIGDATA</span>
+            </a>
+            <a class="btn btn-link visible-xs" data-toggle="dropdown" data-target=".user">
+                <i class="icon-settings"></i>
+            </a>
+        </div>
         <div class="navbar-left ">
             <ul class="nav navbar-nav m-n hidden-xs nav-user user">
                 <li class="">
