--- a/application/Index/view/layouts/layout1.html
+++ b/application/Index/view/layouts/layout1.html
@@ -13,7 +13,7 @@
     <script type="text/javascript" src="__STATIC__/js/jquery-3.3.1.min.js"></script>
     <!--<script type="text/javascript" src="__STATIC__/index/js/jPlayer/jplayer.flat.css"></script>-->
     <!--<link rel="stylesheet" href="__STATIC__/admin/css/style.css">-->
-    <!--<link rel="stylesheet" href="__STATIC__/js/layui/css/layui.css">-->
+    <link rel="stylesheet" href="__STATIC__/js/layui/css/layui.css">
     <link rel="stylesheet" href="__STATIC__/iconfont/iconfont.css">
     <link rel="shortcut icon" href="__STATIC__/img/favicon.png" />
     <script type="text/javascript" src="__STATIC__/js/layui/layui.js"></script>
@@ -59,16 +59,18 @@
         <div class="navbar-right ">
 
             <ul class="nav navbar-nav m-n hidden-xs nav-user user">
+                {empty  name="$Think.session.bigdata_user_type"}
                 <li class="">
-                    <a href="index.html" >
-                        <span class="hidden-nav-xs m-l-sm">注册</span>
+                    <a href="#" >
+                        <span class="hidden-nav-xs m-l-sm register">注册</span>
                     </a>
                 </li>
                 <li class="">
-                    <a href="index.html" >
-                        <span class="hidden-nav-xs m-l-sm">登录</span>
+                    <a href="{:url('index/login')}" >
+                        <span class="hidden-nav-xs m-l-sm login">登录</span>
                     </a>
                 </li>
+                {else /}
                 <li class="hidden-xs">
                     <a href="#" class="dropdown-toggle lt" data-toggle="dropdown">
                         <i class="icon-bell"></i>
@@ -96,9 +98,9 @@
                 </li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle bg clear" data-toggle="dropdown">
-              <span class="thumb-sm avatar pull-right m-t-n-sm m-b-n-sm m-l-sm">
-                <img src="__STATIC__/index/images/a0.png" alt="...">
-              </span>
+                      <span class="thumb-sm avatar pull-right m-t-n-sm m-b-n-sm m-l-sm">
+                        <img src="__STATIC__/index/images/a0.png" alt="...">
+                      </span>
                         John.Smith <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu animated fadeInRight">
@@ -120,10 +122,11 @@
                         </li>
                         <li class="divider"></li>
                         <li>
-                            <a href="modal.lockme.html" data-toggle="ajaxModal" >Logout</a>
+                            <a href="{:url('index/logout')}" >退出登录</a>
                         </li>
                     </ul>
                 </li>
+                {/empty}
             </ul>
         </div>
     </header>
@@ -135,11 +138,11 @@
                         {__CONTENT__}
                     </section>
                 </section>
-                <a href="#" class="hide nav-off-screen-block" data-toggle="class:nav-off-screen,open" data-target="#nav,html"></a>
             </section>
         </section>
     </section>
 </section>
+
 <script src="__STATIC__/index/js/bootstrap.js"></script>
 <!-- App -->
 <script src="__STATIC__/index/js/app.js"></script>
@@ -167,6 +170,41 @@
         '</span>'+
         '</a>';
     // setTimeout(function(){addMsg($msg);}, 1500);
+
+    // $('.login').on('click',function () {
+    //     layui.use('layer', function(){
+    //         var $ = layui.jquery,
+    //             layer = layui.layer;
+    //
+    //         //触发事件
+    //         layer.open({
+    //             type: 2
+    //             ,title: false
+    //             ,closeBtn: false
+    //             ,area: ['800px','350px']
+    //             ,shade: 0.8
+    //             ,btn: ['登录','取消']
+    //             ,btnAlign: 'c'
+    //             ,moveType: 1 //拖拽模式，0或者1
+    //             ,content: '{:url("index/login")}'
+    //             ,yes: function (index,layero) {
+    //                 var form = layer.getChildFrame('#myform', index);
+    //                 form.serialize();
+    //                 ajax_request.post('{:url("index/loginverify")}',{name:name,password:password,type:type},function (data) {
+    //
+    //                 })
+    //             }
+    //             , btn2:function (index, layero){
+    //                 layer.close(index);//关闭当前
+    //             }
+    //             ,success: function(layero){
+    //
+    //             }
+    //         });
+    //     });
+    // });
+
 </script>
+
 </body>
 </html>
