--- a/application/Index/view/layouts/layout1.html
+++ b/application/Index/view/layouts/layout1.html
@@ -14,11 +14,13 @@
     <!--<script type="text/javascript" src="__STATIC__/index/js/jPlayer/jplayer.flat.css"></script>-->
     <!--<link rel="stylesheet" href="__STATIC__/admin/css/style.css">-->
     <link rel="stylesheet" href="__STATIC__/js/layui/css/layui.css">
+    <link rel="stylesheet" href="__STATIC__/js/DPlayer.min.css">
     <link rel="stylesheet" href="__STATIC__/iconfont/iconfont.css">
     <link rel="shortcut icon" href="__STATIC__/img/favicon.png" />
     <script type="text/javascript" src="__STATIC__/js/layui/layui.js"></script>
     <script type="text/javascript" src="__STATIC__/js/commom.js"></script>
     <script type="text/javascript" src="__STATIC__/js/layui-xtree.js"></script>
+    <script type="text/javascript" src="__STATIC__/js/DPlayer.min.js"></script>
     <!--<script type="text/javascript" src="__STATIC__/js/layui_exts/excel.js"></script>-->
     <!--<script type="text/javascript" src="__STATIC__/js/layui_exts/FileSaver.js"></script>-->
     <!--<script type="text/javascript" src="__STATIC__/js/layui_exts/xlsx.js"></script>-->
@@ -134,9 +136,9 @@
         <section class="hbox stretch">
             <section id="content">
                 <section class="vbox" id="bjax-el">
-                    <section class="scrollable padder-lg padder-v page-inner">
+                    <!--<section class="scrollable padder-lg padder-v page-inner">-->
                         {__CONTENT__}
-                    </section>
+                    <!--</section>-->
                 </section>
             </section>
         </section>
