--- a/application/Index/view/index/comment.html
+++ b/application/Index/view/index/comment.html
@@ -1,4 +1,5 @@
 {layout name="layouts/layout1" /}
+<section class="scrollable padder-lg padder-v page-inner">
   <div class="tab-pane" id="{$type==1?'comment':'question'}">
     <div class="text-center wrapper hidden is_loadding_dom">
       <i class="fa fa-spinner fa fa-spin fa fa-large"></i>
@@ -57,3 +58,4 @@
       {$comques->render()}
     </div>
   </div>
+</section>
